force-app/main/default/objects/Monthly_Budget__c/Monthly_Budget__c.object-meta.xml
<CustomObject>
    <label>Monthly Budget</label>
    <nameField>
        <displayFormat>BUD-{00000}</displayFormat>
        <label>Monthly Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>