force-app/main/default/objects/Monthly_Budget__c/fields/Actual_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spent__c</fullName>
    <label>Actual Spent</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Monthly_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>