force-app/main/default/objects/Monthly_Budget__c/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <description>Planned spending</description>
    <inlineHelpText>Planned spending</inlineHelpText>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>