force-app/main/default/objects/Monthly_Budget__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Same as Expense categories</description>
    <inlineHelpText>Same as Expense categories</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>