force-app/main/default/objects/Monthly_Budget__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), MONTH(TODAY()), 1)</defaultValue>
    <description>Budget Day</description>
    <inlineHelpText>Budget Day</inlineHelpText>
    <label>Month Year</label>
    <type>Date</type>
</CustomField>